fix word and break wraping in mardown-view

--- a/packages/tailwindcss/globals.css
+++ b/packages/tailwindcss/globals.css
@@ -201,3 +201,9 @@
   max-width: 100%;
   max-height: 75vw;
 }
+
+.markdown-view {
+  word-wrap: break-word;
+  word-break: break-word;
+  hyphens: none;
+}
